--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- style -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
     <body>
@@ -22,7 +22,7 @@
         <div class="header__container">
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
-                <img src="/images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                <img src="./images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
                 <ul class="header__nav-list">
                     <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
                     <li class="header__nav-item"><a href="#" class="header__nav-link">Productos</a></li>
@@ -46,7 +46,7 @@
                     <button class="header__hamburger" onclick="toggleMenu()">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <img src="/images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="./images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
                     <div class="header__icon-container">
                         <i class="fas fa-heart header__icon"></i>
                         <i class="fas fa-shopping-cart header__icon"></i>
