--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
         <div class="header__container">
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
-                <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
-                <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
-                    <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
-                    <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
-                    <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
-                </ul>
-                <div class="header__search-container">
-                    <input type="text" placeholder="Buscar..." class="header__search-input">
-                    <button class="header__search-button"><i class="fas fa-search"></i></button>
+                <div class="header__navbar-img-list">
+                    <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                    <ul class="header__nav-list">
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
+                        <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
+                        <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
+                        <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
+                    </ul>
                 </div>
+                <div class="header__search-container">
+                    <input type="text" placeholder="Buscar..." class="header__search-input input">
+                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                </div>
+
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
                     <i class="fas fa-shopping-cart header__icon"></i>
@@ -60,13 +63,13 @@
                     <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
                 </ul>
                 <div class="header__search-container">
-                    <input type="text" placeholder="Buscar..." class="header__search-input" name="search">
-                    <button class="header__search-button"><i class="fas fa-search"></i></button>
+                    <input type="text" placeholder="Buscar..." class="header__search-input input" name="search">
+                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
     </nav>
-</header>  
+</header>
             <!-- Main -->
             <main>                
                 <section class="carousel">
@@ -151,7 +154,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">CASCO PARA BOMBEROS</p>
                                 <p class="product-card__price">$ 1.116.846,17</p>
-                                <button class="product-card__add-button">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -163,7 +166,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">ANTEOJOS DE SEGURIDAD</p>
                                 <p class="product-card__price">$ 23.972,23</p>
-                                <button class="product-card__add-button">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -175,7 +178,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">PROTECTOR AUDITIVO DE COPA</p>
                                 <p class="product-card__price">$ 44.408,25</p>
-                                <button class="product-card__add-button">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -187,7 +190,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">RESPIRADOR MEDIA CARA</p>
                                 <p class="product-card__price">$ 33.292,95</p>
-                                <button class="product-card__add-button">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -199,7 +202,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">CASCO DE ALTURA</p>
                                 <p class="product-card__price">$ 64.575,30</p>
-                                <button class="product-card__add-button">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                     </div>
@@ -350,23 +353,23 @@
                         <form class="contact__form" action="https://formspree.io/f/xovqebdq" method="POST">
                             <div class="contact__form-group contact__form-group--fullname">
                                 <div class="contact__form-group">
-                                    <label class="contact__label" for="name">Nombre:</label>
-                                    <input type="text" id="name" name="name" placeholder="Introduzca su nombre" required>
+                                    <label class="label label--form" for="name">Nombre:</label>
+                                    <input class="input" type="text" id="name" name="name" placeholder="Introduzca su nombre" required>
                                 </div>
-                                <div class="contact__form-group">
-                                    <label class="contact__label" for="lastname">Apellido:</label>
-                                    <input type="text" id="lastname" name="lastname" placeholder="Introduzca su apellido" required>
+                                <div class="contact__form-group ">
+                                    <label class="label label--form" for="lastname">Apellido:</label>
+                                    <input class="input" type="text" id="lastname" name="lastname" placeholder="Introduzca su apellido" required>
                                 </div>
                             </div>
                             <div class="contact__form-group">
-                                <label class="contact__label" for="email">Correo Electrónico:</label>
-                                <input type="email" id="email" name="email" placeholder="Introduzca su correo electrónico" required>
+                                <label class="label label--form " for="email">Correo Electrónico:</label>
+                                <input class="input" type="email" id="email" name="email" placeholder="Introduzca su correo electrónico" required>
                             </div>
                             <div class="contact__form-group">
-                                <label class="contact__label" for="message">Mensaje:</label>
-                                <textarea id="message" name="message" placeholder="Escriba su mensaje aquí" required></textarea>
+                                <label class="label label--form" for="message">Mensaje:</label>
+                                <textarea class="input" id="message" name="message" placeholder="Escriba su mensaje aquí" required></textarea>
                             </div>
-                            <button type="submit" class="contact__submit">ENVIAR MENSAJE</button>
+                            <button type="submit" class="contact__submit btn btn--primary">ENVIAR MENSAJE</button>
                         </form>
 
                         <!-- Información adicional de contacto -->
@@ -374,33 +377,33 @@
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-envelope"></i>
                                 <div class="contact__info-content">
-                                    <h3>Email</h3>
-                                    <p>Nuestro equipo está para ayudarte.</p>
-                                    <p><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
+                                    <h3 class="label--medium">Email</h3>
+                                    <p class="label--small">Nuestro equipo está para ayudarte.</p>
+                                    <p class="label--small"><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-comments"></i>
                                 <div class="contact__info-content">
-                                    <h3>Chat en vivo</h3>
-                                    <p>¿Necesitas asistencia inmediata?</p>
-                                    <p><a href="#" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
+                                    <h3 class="label--medium">Chat en vivo</h3>
+                                    <p class="label--small">¿Necesitas asistencia inmediata?</p>
+                                    <p class="label--small"><a href="#" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-location-dot"></i>
                                 <div class="contact__info-content">
-                                    <h3>Dirección</h3>
-                                    <p>Nuestra oficina se encuentra ubicada en:</p>
-                                    <p>123, Zuviria, CABA</p>                                    
+                                    <h3 class="label--medium">Dirección</h3>
+                                    <p class="label--small">Nuestra oficina se encuentra ubicada en:</p>
+                                    <p class="label--small">123, Zuviria, CABA</p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-phone"></i>
                                 <div class="contact__info-content">
-                                    <h3>Teléfono</h3>
-                                    <p>Atención de Lunes a Viernes, 8 am - 5 pm</p>
-                                    <p>(+54) 1156092589</p>
+                                    <h3 class="label--medium">Teléfono</h3>
+                                    <p class="label--small">Atención de Lunes a Viernes, 8 am - 5 pm</p>
+                                    <p class="label--small">(+54) 1156092589</p>
                                 </div>
                             </article>
                         </div>
@@ -414,8 +417,8 @@
                     </div>
                     <div class="newsletter__form-container">
                         <form class="newsletter__form" action="">
-                            <input type="email" id="emailNewsLetter" name="emailNewsLetter" class="newsletter__input" placeholder="Introduzca su correo electrónico" required>
-                            <button type="submit" class="newsletter__submit">SUSCRÍBETE</button>
+                            <input type="email" id="emailNewsLetter" name="emailNewsLetter" class="newsletter__input input" placeholder="Introduzca su correo electrónico" required>
+                            <button type="submit" class="newsletter__submit btn btn--secondary">SUSCRÍBETE</button>
                         </form>
                     </div>
                 </section>
