--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <!-- Head -->
 <head>
     <meta charset="UTF-8">
-    <!-- viewport -->
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- title -->
+    <!-- Title -->
     <title>
         Inicio - WorkZone
     </title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- style -->
+    <!-- Style -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Icon -->
+    <link rel="icon" href="images/workZone.ico" type="image/x-icon">
 </head>
 
     <body>
@@ -23,7 +25,7 @@
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
                 <div class="header__navbar-img-list">
-                    <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <ul class="header__nav-list">
                         <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
                         <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
@@ -49,7 +51,7 @@
                     <button class="header__hamburger" onclick="toggleMenu()">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <img src="images/workZone-logo.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <div class="header__icon-container">
                         <i class="fas fa-heart header__icon"></i>
                         <i class="fas fa-shopping-cart header__icon"></i>
@@ -387,7 +389,7 @@
                                 <div class="contact__info-content">
                                     <h3 class="label--medium">Chat en vivo</h3>
                                     <p class="label--small">¿Necesitas asistencia inmediata?</p>
-                                    <p class="label--small"><a href="#" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
+                                    <p class="label--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
@@ -424,6 +426,11 @@
                 </section>
                 <!-- /Section newsletter -->
             </main>
+            <!-- Icon whatsapp -->
+            <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <!-- /Icon whatsapp -->
             <!-- Scripts -->
             <script>
     function toggleMenu() {
