--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>
         Inicio - WorkZone
     </title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Font Awesome -->    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <!-- Style -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Icon -->
@@ -35,7 +35,7 @@
                 </div>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input input">
-                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                    <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
                 </div>
 
                 <div class="header__icon-container">
@@ -66,7 +66,7 @@
                 </ul>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input input" name="search">
-                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                    <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
@@ -76,24 +76,27 @@
             <main>                
                 <section class="carousel">
     <div class="carousel-slide active">
-        <img src="images/banner/Banner_craneana.jpg" alt="Imagen 1">
+        <img src="images/banner/Banner_Respiratoria.jpg" alt="Protección-Respiratoria">
         <div class="carousel-caption">
             <h2 class="carousel-title">¡TRABAJAMOS PARA PROTEGERTE!</h2>
             <p class="carousel-description">EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-slide">
-        <img src="images/banner/Banner_auditiva.jpg" alt="Imagen 2">
+        <img src="images/banner/Banner_Auditiva.jpg" alt="Protección-Auditiva">
         <div class="carousel-caption">
             <h2 class="carousel-title">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h2>
             <p class="carousel-description">EL RESPANDO QUE NECESITAS EN CADA JORNADA.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-slide">
-        <img src="images/banner/Banner_Facial.jpg" alt="Imagen 3">
+        <img src="images/banner/Banner_Ocular.jpg" alt="Protección-Ocular">
         <div class="carousel-caption">
             <h2 class="carousel-title">CALIDAD CERTIFICADA EN CADA PRODUCTO</h2>
             <p class="carousel-description">EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-controls">
@@ -156,7 +159,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">CASCO PARA BOMBEROS</p>
                                 <p class="product-card__price">$ 1.116.846,17</p>
-                                <button class="product-card__add-button btn btn--primary btn btn--primary">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -208,7 +211,7 @@
                             </div>
                         </article>  
                     </div>
-                    <button class="products__view-more">VER MÁS</button>
+                    <button class="products__view-more btn btn--secondary">VER MÁS</button>
                 </section>
                 <!-- /Section products -->
                 <!-- Section categories -->
@@ -248,7 +251,7 @@
                             </div>
                         </article>  
                     </div>
-                    <button class="categories__view-more">VER MÁS</button>
+                    <button class="categories__view-more btn btn--secondary">VER MÁS</button>
                 </section>
                 <!-- /Section categories -->
                 <!-- Section about -->   
@@ -260,7 +263,7 @@
                         <p class="about__text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptates quo nemo neque nesciunt similique minus itaque impedit eveniet blanditiis dicta est nam in perferendis tenetur, error eum dolore doloremque, quasi pariatur sint natus exercitationem mollitia veniam!
                         </p>
-                        <button type="submit" class="about__button">VER MÁS</button>
+                        <button type="submit" class="about__submit btn btn--secondary">VER MÁS</button>
                     </div>
                 </section> 
                 <!-- /Section about -->
@@ -284,6 +287,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -302,6 +306,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -320,6 +325,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -338,6 +344,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -379,33 +386,33 @@
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-envelope"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Email</h3>
-                                    <p class="label--small">Nuestro equipo está para ayudarte.</p>
-                                    <p class="label--small"><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
+                                    <h3 class="text--medium">Email</h3>
+                                    <p class="text--small">Nuestro equipo está para ayudarte.</p>
+                                    <p class="text--small"><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-comments"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Chat en vivo</h3>
-                                    <p class="label--small">¿Necesitas asistencia inmediata?</p>
-                                    <p class="label--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
+                                    <h3 class="text--medium">Chat en vivo</h3>
+                                    <p class="text--small">¿Necesitas asistencia inmediata?</p>
+                                    <p class="text--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-location-dot"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Dirección</h3>
-                                    <p class="label--small">Nuestra oficina se encuentra ubicada en:</p>
-                                    <p class="label--small">123, Zuviria, CABA</p>                                    
+                                    <h3 class="text--medium">Dirección</h3>
+                                    <p class="text--small">Nuestra oficina se encuentra ubicada en:</p>
+                                    <p class="text--small">123, Zuviria, CABA</p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-phone"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Teléfono</h3>
-                                    <p class="label--small">Atención de Lunes a Viernes, 8 am - 5 pm</p>
-                                    <p class="label--small">(+54) 1156092589</p>
+                                    <h3 class="text--medium">Teléfono</h3>
+                                    <p class="text--small">Atención de Lunes a Viernes, 8 am - 5 pm</p>
+                                    <p class="text--small">(+54) 1156092589</p>
                                 </div>
                             </article>
                         </div>
