--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     <input type="text" placeholder="Buscar..." class="header__search-input input">
                     <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
                 </div>
-
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
                     <i class="fas fa-shopping-cart header__icon"></i>
@@ -87,7 +86,7 @@
         <img src="images/banner/Banner_Auditiva.jpg" alt="Protección-Auditiva">
         <div class="carousel-caption">
             <h2 class="carousel-title">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h2>
-            <p class="carousel-description">EL RESPANDO QUE NECESITAS EN CADA JORNADA.</p>
+            <p class="carousel-description">EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
             <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
@@ -433,6 +432,61 @@
                 </section>
                 <!-- /Section newsletter -->
             </main>
+            <footer class="footer">
+    <div class="footer__container">
+        <div class="footer__column footer__column--about">
+            <img src="images/workZone-logo-white.png" alt="Logo de la empresa" class="footer__logo">
+            <p class="footer__text">Proporcionamos equipos y vestimenta de seguridad industrial de la más alta calidad para mantener la seguridad de tu equipo de trabajo.</p>
+        </div>
+
+        <!-- Columna 2: Menú Principal -->
+        <div class="footer__column footer__column--menu">
+            <h3 class="footer__title">MENÚ PRINCIPAL</h3>
+            <ul class="footer__list">
+                <li><a href="#inicio" class="footer__link">Inicio</a></li>                
+                <li><a href="#products" class="footer__link">Productos</a></li>  
+                <li><a href="#about" class="footer__link">Acerca de</a></li>  
+                <li><a href="#contact" class="footer__link">Contacto</a></li>
+            </ul>
+        </div>
+
+        <!-- Columna 3: Categorías -->
+        <div class="footer__column footer__column--categories">
+            <h3 class="footer__title">CATEGORÍAS</h3>
+            <ul class="footer__list">
+                <li><a href="#craneana" class="footer__link">Craneana</a></li>
+                <li><a href="#auditiva" class="footer__link">Auditiva</a></li>
+                <li><a href="#respiratoria" class="footer__link">Respiratoria</a></li>
+                <li><a href="#ocular" class="footer__link">Ocular</a></li>
+                <li><a href="#facial" class="footer__link">Facial</a></li>
+            </ul>
+        </div>
+
+        <div class="footer__column footer__column--industries">
+            <h3 class="footer__title">INDUSTRIAS</h3>
+            <ul class="footer__list">
+                <li><a href="#salud" class="footer__link">Salud</a></li>
+                <li><a href="#petroleo" class="footer__link">Petróleo</a></li>
+                <li><a href="#mineria" class="footer__link">Minería</a></li>
+                <li><a href="#bomberos" class="footer__link">Bomberos</a></li>
+                <li><a href="#agroindustria" class="footer__link">Agroindustria</a></li>
+                <li><a href="#metalúrgica" class="footer__link">Metalúrgica</a></li>
+            </ul>
+        </div>
+
+        <!-- Columna 4: Redes Sociales -->
+        <div class="footer__column footer__column--social">
+            <h3 class="footer__title">SIGAMOS CONECTADOS</h3>
+            <div class="footer__social-links">
+                <a href="https://facebook.com" class="footer__social-link" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://instagram.com" class="footer__social-link" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/" class="footer__social-link" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.tiktok.com/" class="footer__social-link" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="https://www.youtube.com" class="footer__social-link" aria-label="Youtube"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
             <!-- Icon whatsapp -->
             <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
                 <i class="fab fa-whatsapp"></i>
