--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Font Awesome -->    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <!-- Style -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- Icon -->
-    <link rel="icon" href="/images/workZone.ico" type="image/x-icon">
+    <link rel="icon" href="./images/workZone.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -27,7 +27,7 @@
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
                 <div class="header__navbar-img-list">
-                    <img src="/images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="./images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <ul class="header__nav-list">
                         <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
                         <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
@@ -52,7 +52,7 @@
                     <button class="header__hamburger" onclick="toggleMenu()">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <img src="/images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="./images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <div class="header__icon-container">
                         <i class="fas fa-heart header__icon"></i>
                         <i class="fas fa-shopping-cart header__icon"></i>
@@ -1290,7 +1290,7 @@
             <footer class="footer">
     <div class="footer__container">
         <div class="footer__column footer__column--about">
-            <img src="/images/workZone-logo-white.png" alt="Logo de la empresa" class="footer__logo">
+            <img src="./images/workZone-logo-white.png" alt="Logo de la empresa" class="footer__logo">
             <p class="footer__text">Proporcionamos equipos y vestimenta de seguridad industrial de la más alta calidad para mantener la seguridad de tu equipo de trabajo.</p>
         </div>
 
